<resources>
    <string name="app_name">Floricultura Tades</string>
    <string name="cadastre_se">Ainda não tem um Login? Clique aqui e cadastre-se</string>
    <string name="title_cadastro">Cadastro</string>
    <string name="entrar">Entrar</string>
    <string name="label_senha">Senha</string>
    <string name="label_email">Email</string>
    <string name="logo_floricultura_tades">Logo Floricultura Tades</string>
    <string name="navigation_drawer_open">Abre navegação</string>
    <string name="navigation_drawer_close">Fecha navegação</string>

    <string name="saudacao_header">Olá, Visitante!</string>
    <string name="logar_header">Clique aqui para entrar ou cadastrar</string>
    <string name="name_teste">Guilherme Pereira</string>
    <string name="email_teste">guilherme.pereira@email.com</string>

    <string name="web_service_path">http://192.168.0.44:8089/Api_Floricultura_Tads/webresources/</string>

    <string name="title_info_pessoais">Informações Pessoais</string>
    <string name="lbl_required_nome">Nome*</string>
    <string name="lbl_required_sobrenome">Sobrenome*</string>
    <string name="lbl_required_email">Email*</string>
    <string name="lbl_required_cpf">CPF*</string>
    <string name="lbl_required_senha">Senha*</string>
    <string name="lbl_required_confirmar_senha">Confirmar Senha*</string>
    <string name="title_info_adicionais">Informações Adicionais</string>
    <string name="lbl_required_endereco">Endereço*</string>
    <string name="lbl_required_numero">Número*</string>
    <string name="lbl_required_cep">CEP*</string>
    <string name="lbl_complemento">Complemento</string>
    <string name="lbl_required_estado">Estado*</string>
    <string name="lbl_required_cidade">Cidade*</string>
    <string name="lbl_required_bairro">Bairro*</string>
    <string name="lbl_required_tipo_endereco">Tipo Endereço*</string>
    <string name="btn_cadastrar">Cadastrar</string>

    <string name="lbl_required_tipo_pagamento">Tipo do Pagamento*</string>
    <string name="lbl_required_numero_pagamento">numero do Cartão*</string>
    <string name="lbl_required_nome_titular">Nome do Titular*</string>
    <string name="lbl_required_data_vencimento">Data Vencimento*</string>
    <string name="lbl_required_codigo_seguranca">CVV*</string>

    <string name="drawer_inicio">Inicio</string>
    <string name="drawer_perfil">Perfil</string>
    <string name="drawer_pedidos_em_andamento">Pedidos em andamento</string>
    <string name="drawer_pedidos_finalizados">Pedidos finalizados</string>
    <string name="drawer_sair">Logout</string>
    <string name="infromacao_carrinho_vazio">Infromação Carrinho Vazio</string>
    <string name="info_carrinho_vazinho">Você ainda não adicionou itens no seu carrinho :(</string>
    <string name="informacoes_produto">Informações do Produto</string>
    <string name="perguntas_frequentes">Perguntas Frequentes</string>

    <string name="info_pedidos_andamento_empty">Você não possui pedidos em andamento</string>
    <string name="info_pedidos_finalizados_empty">Você não possui entregas registradas no servidor :(</string>

    <string-array name="tipo_enderecos">
        <item>Cobrança</item>
        <item>Entrega</item>
    </string-array>

    <string-array name="tipo_pagamento">
        <item>Crédito</item>
        <item>Débito</item>
    </string-array>

    <string-array name="estados">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>

</resources>
