<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/inicio"
        android:icon="@drawable/ic_home"
        android:title="@string/drawer_inicio"/>

    <item
        android:id="@+id/visualizar_cadastro"
        android:icon="@drawable/ic_usuario"
        android:title="@string/drawer_perfil"/>

    <item
        android:id="@+id/pedidos_andamento"
        android:icon="@drawable/ic_entrega_andamento"
        android:title="@string/drawer_pedidos_em_andamento"/>

    <item
        android:id="@+id/pedidos_finalizados"
        android:icon="@drawable/ic_pedidos_finalizados"
        android:title="@string/drawer_pedidos_finalizados"/>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_exit"
        android:title="@string/drawer_sair"/>
</menu>