<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_cadastro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/title_cadastro"
            app:titleTextColor="@android:color/white"
            app:navigationIcon="@drawable/ic_back_activity_white"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_floricultura_tades"
                android:contentDescription="@string/logo_floricultura_tades"/>

            <!-- Informações Pessoais Constraint -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title_info_pessoal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/title_info_pessoais"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_nome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_required_nome"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintTop_toBottomOf="@id/title_info_pessoal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/layout_sobrenome">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_nome"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_sobrenome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_required_sobrenome"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintTop_toTopOf="@id/layout_nome"
                    app:layout_constraintStart_toEndOf="@id/layout_nome"
                    app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sobrenome"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_required_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintTop_toBottomOf="@id/layout_nome"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_cpf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_required_cpf"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintTop_toBottomOf="@id/layout_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_cpf"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_required_senha"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintTop_toBottomOf="@id/layout_cpf"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_senha"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_confirma_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_required_confirmar_senha"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintTop_toBottomOf="@id/layout_senha"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_confirma_senha"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#000000"
                android:layout_marginTop="16dp"/>

            <!-- Informações Adcionais Constraint -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/title_info_adc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/title_info_adicionais"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:textSize="20sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_endereco"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_required_endereco"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintTop_toBottomOf="@id/title_info_adc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/layout_numero">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_endereco"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_numero"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_required_numero"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintTop_toTopOf="@id/layout_endereco"
                    app:layout_constraintStart_toEndOf="@id/layout_endereco"
                    app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_numero"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_cep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_required_cep"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintTop_toTopOf="@id/layout_complemento"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/layout_complemento">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_cep"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_complemento"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_complemento"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintTop_toBottomOf="@id/layout_endereco"
                    app:layout_constraintStart_toEndOf="@id/layout_cep"
                    app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_complemento"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_estado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:endIconMode="dropdown_menu"
                    android:hint="@string/lbl_required_estado"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintTop_toBottomOf="@id/layout_cep"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/spinner_estado"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_cidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_required_cidade"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintTop_toBottomOf="@id/layout_estado"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_cidade"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_bairro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_required_bairro"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintTop_toBottomOf="@id/layout_cidade"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_bairro"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_tipo_endereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:endIconMode="dropdown_menu"
                    android:hint="@string/lbl_required_tipo_endereco"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintTop_toBottomOf="@id/layout_bairro"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/spinner_tipo_endereco"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"/>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cadastro"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/btn_cadastrar"
                android:layout_marginTop="16dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>